<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:text="@string/tips_content"
        android:textColor="#666666"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_btn_cancel"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>