<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/subscribeButton"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/subscribe_to_weather"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/logTokenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/get_token"
        app:layout_constraintTop_toBottomOf="@+id/subscribeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_copy"/>

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp"
        android:paddingHorizontal="10dp"
        android:background="#000000"
        android:textColor="@color/white"
        android:text="@string/copy_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logTokenButton"
        app:layout_constraintBottom_toBottomOf="@+id/logTokenButton"/>

    <TextView
        android:id="@+id/tv_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        tools:text="aaaaa"
        app:layout_constraintTop_toBottomOf="@+id/logTokenButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>